--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
     "react": "16.13.1",
-    "react-native": "0.63.0",
-    "react-native-webview": "^10.3.3"
+    "react-native": "0.63.2",
+    "react-native-svg": "^12.1.0",
+    "react-native-webview": "^10.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
